--- a/style.css
+++ b/style.css
@@ -81,6 +81,11 @@ a:hover {
     width: 444px;
 }
 
+.caption > p {
+    font-size: 25px;
+    margin-top: 15px;
+}
+
 h3 {
     border: 1px solid whitesmoke;
     margin: 50px 200px;
@@ -93,11 +98,11 @@ h3 {
 .pricing {
     border: 3px dashed black;
     height: 900px;
+    width: 100%;
 }
 
-.fixed {
-    width: 40%;
-    height: 200px;
-    border: 2px solid black;
-    position: fixed;
+.feedbacks {
+    height: 500px;
+    width: 100%;
+    border: 3px dotted blue;
 }
