--- a/style.css
+++ b/style.css
@@ -50,7 +50,6 @@ a:hover {
 
 .hero {
     width: 100%;
-    height: 700px;
     background-repeat: no-repeat;
     background-image: url(img/product-bg.jpg);
     background-blend-mode: overlay;
@@ -62,8 +61,6 @@ a:hover {
     align-items: center;
 }
  
-
-
 .caption {
     color: white;
     margin: 50px 100px 50px 300px;
@@ -97,12 +94,55 @@ h3 {
 
 .pricing {
     border: 3px dashed black;
-    height: 900px;
+    height: ;
     width: 100%;
+    display: flex;
+}
+
+.img-pdt {
+    width: 582px;
+    height: 326px;
+    margin: 0;
+    
+}
+
+#img-pdt {
+    border: 1px solid red;
+    margin: 0 50px;
+    padding: 20px 150px;
+}
+
+#pdct-details {
+    text-align: center;
+    padding: 50px 0 0;
+}
+
+#pdct-details > h3 {
+    padding: 10px;
+    margin: 200px;
+    border: 1px solid red;
+}
+
+h1 {
+    text-align: center;
+    margin: 30px 0 0;
 }
 
 .feedbacks {
-    height: 500px;
     width: 100%;
+    padding: 20px 20px;
     border: 3px dotted blue;
+    text-align: center;
+    display: flex
+}
+
+.testimonials {
+    padding: 0 100px;
+    border: 1px solid red;
+}
+
+footer {
+    width: 100%;
+    height: 200px;
+    border: 3px solid brown;
 }
