--- a/style.css
+++ b/style.css
@@ -8,10 +8,19 @@ main {
     width: 100%;
 }
 
+h5,h2,h1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+p {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+/*Header section begins here*/
 header {
     width: 100%;
     height: 100px;
-    background-color: papayawhip;
+    background-color: rgb(176, 50, 4);
     display: flex;
     justify-content: space-between;
 }
@@ -28,8 +37,8 @@ img {
     gap: 150px;
     margin: 20px 150px;
     font-size: 30px;
-    border: 1px solid red;
-    background-color: wheat;
+    border: ;
+    background-color: ;
 }
 
 a {
@@ -37,17 +46,21 @@ a {
     color: white;
 }
 
-a:hover {
+#bar a:hover {
     color: aquamarine;
+    text-decoration: underline;
 }
 
 #order {
-    border: 1px solid white;
+    border: 3px solid white;
     border-radius: 10px;
-    padding: 15px;
-    background-color: royalblue;
+    padding: 5px 15px;
+    background-color: rgb(245, 222, 179);
+    color: royalblue;
 }
 
+
+/*Hero section begins here*/
 .hero {
     width: 100%;
     background-repeat: no-repeat;
@@ -57,7 +70,7 @@ a:hover {
     background-size: cover;
     display: flex;
     justify-content: space-between;
-    border: 3px dotted greenyellow;
+    border: ;
     align-items: center;
 }
  
@@ -67,15 +80,16 @@ a:hover {
     text-align: center;
     padding: 50px;
     font-size: 40px;
-    border: 1px solid white;
+    border: ;
     width: 100%;
 }
 
 #showcase {
-    border: 1px solid red;
+    border: ;
     margin: 5% 200px;
     height: 447px;
     width: 444px;
+    max-width: ;
 }
 
 .caption > p {
@@ -92,12 +106,14 @@ h3 {
     background-color: rgb(0, 43, 0);
 }
 
+
+/*Pricing section begins here*/
 .pricing {
-    border: 3px dashed black;
+    border: ;
     width: 100%;
     display: flex;
     justify-content: center;
-    
+    background-color: wheat;
 }
 
 .img-pdt {
@@ -107,7 +123,7 @@ h3 {
 }
 
 #img-pdt {
-    border: 1px solid red;
+    border: ;
     margin: 0 100px;
     padding: 20px 10px;
     display: flex;
@@ -117,70 +133,161 @@ h3 {
 
 #pdct-details {
     text-align: center;
-    padding: 50px 0 0;
-    border: 3px solid green;
+    padding: 150px 0 0;
+    margin: 0 20px 0 0;
+    border: ;
+}
+
+#pdct-details > h5 {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    font-size: 50px;
+    padding: 20px 0;
+    color: orangered;
+    border: 3px solid gray;
 }
 
 #pdct-details > h3 {
-    padding: 10px;
-    margin: 200px;
-    border: 1px solid red;
+    padding: 20px 10px;
+    margin: 120px 200px;
+    border: 3px solid white;
+    background-color: green;
+
 }
 
+
+/*Process section begins here*/
 .process {
     width: 100%;
     display: flex;
-    border: 2px solid brown;
-
+    margin: 5px 0;
+    border: ;
 }
 
 #process-details {
     text-align: center;
     padding: 50px 0 0;
-    border: 3px solid green;
+    width: 80%;
+    border: ;
+}
+
+h5 {
+    
+}
+
+#process-details h5 {
+    margin: 0;
+    color: whitesmoke;
+    background-color: orangered;
+    padding: 10px 0;
+    border-radius: 5px;
+}
+
+#process-details h5, p {
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin: 40px;
 }
 
 #img-process {
-    border: 1px solid red;
-    margin: 0 auto;
-    padding: 20px 10px;
+    border: ;
+    margin: 0;
+    padding: 0;
     display: flex;
-    gap: 10px;
+    gap: 0px;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
-    max-width: ;
+    width: ;
+    border-radius: 15px;
+    background-color: rgba(204, 190, 185, 0.148);
 }
-
 
 .img-process {
-    width: 800px;
-    height: 460px;
-    margin: 0 0px; 
+    width: 500px;
+    height: 330px;
+    margin: 30px 0px; 
     object-fit: cover;
+    border-radius: 10px;
+    border: ;
 }
 
-h1 {
+/*Feedback section begins here*/
+#user-feed {
     text-align: center;
     margin: 30px 0 0;
+    padding: 30px 0 0;
+    color: orangered;
 }
 
 .feedbacks {
     width: 100%;
-    padding: 20px 20px;
-    border: 3px dotted blue;
+    border: ;
     text-align: center;
-    display: flex
+    display: flex;
+    justify-content: space-evenly;
+    
 }
 
 .testimonials {
     padding: 0 100px;
-    border: 1px solid red;
+    border: ;
 }
 
+/*Location section begins here*/
+.location {
+    text-align: center;
+    background-color: rgba(245, 222, 179, 0.27);
+    padding: 20px 0;
+}
+
+.location > h3 {
+    width: auto;
+    margin: 0;
+}
+
+/*Footer section begins here*/
 footer {
     width: 100%;
-    height: 200px;
-    border: 3px solid brown;
+    
+    background-color: gainsboro;
+    border: ;
+}
+
+.details {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.details > nav {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    justify-content: space-evenly;
+    font-size: 25px;
+    margin: 0 290px 0;
+    padding: 20px 0;
+}
+
+.details > nav > a{
+    color: blue;
+}
+
+address {
+    font-size: 30px;
+    margin: 40px 90px;
+    padding: ;
+    width: 30%;
+}
+
+.copyright {
+    background-color: gray;
+    color: white;
+    text-align: center;
+    padding: 20px;
 }
