--- a/mediascreen.css
+++ b/mediascreen.css
@@ -104,7 +104,7 @@ header > img {
     background-repeat: no-repeat;
     background-image: url(img/product-bg.jpg);
     background-blend-mode: overlay;
-    background-color: rgba(0, 0, 0, 85%);
+    background-color: rgba(0, 0, 0, 80%);
     background-size: cover;
     display: flex;
     flex-direction: column-reverse;
@@ -159,6 +159,8 @@ h3 > a :hover {
     background-color: wheat;
 }
 
+
+
 #pdct-details > h5 {
     display: flex;
     flex-direction: column;
@@ -177,6 +179,7 @@ h3 > a :hover {
 #pdct-details > p {
     margin: 20px 0 0 0;
     line-height: 20px;
+    text-align: justify;
 }
 
 #img-pdt {
@@ -197,7 +200,7 @@ h3 > a :hover {
 }
 
 #process-details {
-    text-align: center;
+    text-align: justify;
     padding: 10px;
     width: 100%;
 }
@@ -209,6 +212,7 @@ h3 > a :hover {
     border-radius: 5px;
     margin: 20px;
     font-size: 100%;
+    text-align: center;
 }
 
 #process-details > p {
@@ -248,7 +252,7 @@ h3 > a :hover {
 .feedbacks {
     padding: 10px 20px;
     width: 100%;
-    text-align: center;
+    text-align: justify;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -292,8 +296,15 @@ h3 > a :hover {
 /*Location section begins here*/
 .location {
     text-align: center;
-    background-color: rgba(245, 222, 179, 0.27);
+    background-image: url(https://www.google.com/maps/embed);
+    background-blend-mode: overlay;
+    background-color: rgba(245, 222, 179, 0.195);
     padding: 20px 0;
+}
+
+.location > p {
+    margin: 0 20px;
+    text-align: justify;
 }
 
 .location > h3 {
@@ -371,7 +382,7 @@ address {
     }
 
 
-    .sidepanel  a {
+    .sidepanel {
         display: flex;
         align-items: center;
         gap: 15px;
@@ -398,4 +409,84 @@ address {
         background-color: rgb(245, 222, 179);
         color: royalblue;
     }
+
+    /*Hero section begins here*/
+    .hero {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        align-content: center;
+    }
+
+    .caption {
+        color: white;
+        text-align: center;
+        padding: 30px;
+        font-size: 20px;
+        width: 100%;
+        margin-top: 20px;
+    }
+
+    .caption > p {
+        font-size: 10px;
+    }
+
+    #showcase {
+      padding-left: 10px;
+    }
+
+    /*Pricing section begins here*/
+    .pricing {
+        display: flex;
+        flex-direction: row;
+        gap: 15px;
+        padding: 0 20px;
+    }
+
+    #pdct-details {
+        width: 50%;
+    }
+
+    #img-pdt {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    #pdct-details > h5 {
+        margin: 20px;
+        border: 1px solid gray;
+    }
+
+    #pdct-details > h3 {
+        padding: ;
+        margin: 20px;
+        border: 3px solid white;
+        background-color: green;
+    }
+
+    /*Process section begins here*/
+    #process-details {
+        display: flex;
+        gap: 20px;
+        justify-items: center;
+        text-align: justify;
+    }
+
+    #process-details > p {
+        margin: 0 30px;
+    }
+
+    #img-process {
+        margin: 10px 0;
+        padding: 30px 0;
+        gap: 20px;
+    }
+
+    .img-process {
+        height: 200px;
+    }
+
 }
